# fastapi-demo

./: .gitignore  Dockerfile  fly.toml  main.py  pyproject.toml
.github/workflows/: deploy.yml  python-app.yml
templates/: hello.html
tests/: test_sample.py
